--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "nativescript-angular": "~8.21.0",
     "nativescript-ngx-fonticon": "^4.2.0",
+    "nativescript-toasty": "^3.0.0-alpha.2",
     "nativescript-ui-listview": "^8.2.0",
     "nativescript-ui-sidedrawer": "^8.0.1",
     "reflect-metadata": "~0.1.12",
