--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "nativescript-angular": "~8.21.0",
     "nativescript-couchbase": "^1.0.18",
+    "nativescript-email": "^1.6.0",
     "nativescript-local-notifications": "^4.2.1",
     "nativescript-ngx-fonticon": "^4.2.0",
     "nativescript-toasty": "^3.0.0-alpha.2",
