Add social sharing. (The dead code in the method need to be fixed

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nativescript-email": "^1.6.0",
     "nativescript-local-notifications": "^4.2.1",
     "nativescript-ngx-fonticon": "^4.2.0",
+    "nativescript-social-share": "^1.6.0",
     "nativescript-toasty": "^3.0.0-alpha.2",
     "nativescript-ui-listview": "^8.2.0",
     "nativescript-ui-sidedrawer": "^8.0.1",
