Configure the newly added page in the declaration section in the app.module.ts file. The package.json /lock are added here because they correspond to the installation of the new nativescript-camera plugin in the app level

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nativescript/theme": "~2.3.3",
     "font-awesome": "^4.7.0",
     "nativescript-angular": "~8.21.0",
+    "nativescript-camera": "^4.5.0",
     "nativescript-couchbase": "^1.0.18",
     "nativescript-email": "^1.6.0",
     "nativescript-local-notifications": "^4.2.1",
