--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "nativescript-email": "^1.6.0",
     "nativescript-local-notifications": "^4.2.1",
     "nativescript-ngx-fonticon": "^4.2.0",
+    "nativescript-phone": "^2.0.0",
     "nativescript-social-share": "^1.6.0",
     "nativescript-toasty": "^3.0.0-alpha.2",
     "nativescript-ui-listview": "^8.2.0",
