Add new capability to the application: Selecting images from the phone gallery using the imagepicker plugin.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nativescript-camera": "^4.5.0",
     "nativescript-couchbase": "^1.0.18",
     "nativescript-email": "^1.6.0",
+    "nativescript-imagepicker": "^7.1.0",
     "nativescript-local-notifications": "^4.2.1",
     "nativescript-ngx-fonticon": "^4.2.0",
     "nativescript-phone": "^2.0.0",
