--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "nativescript": {
-    "id": "org.nativescript.conFusion",
+    "id": "org.nativescript.stri",
     "tns-ios": {
       "version": "6.5.0"
     },
